# diu-uploader

./: .gitignore  README.md  package.json
src/: app.css  stores.js
src-tauri/: .taurignore  Cargo.toml  regenerate_icons.sh  run_build.sh  run_build_release.sh  run_dev.sh  tauri.conf.json  tauri.conf.json.options
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  tray.rs  uploader.rs
src/routes/: +page.svelte
src/routes/login/: +page.svelte
test/: http_proxy.sh  upload_server.py
