[package]
name = "diu-uploader"
version = "1.0.1"
description = "DIU documents uploader"
authors = ["yu@matrix.works"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.9"
reqwest = { version = "0.12.12", features = ["multipart"] }
notify-debouncer-full = "0.4.0"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"

